--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Andy Young <onsubmit@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "watch": "tsc --watch",
-    "run": "nodemon --quiet --watch dist dist/index.js",
+    "compile": "tsc && node dist/index.js",
+    "watch": "nodemon --watch src/ --exec \"yarn run compile\" -e ts",
     "build": "npx ts-node src/index.ts"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
+    "ts-node": "^10.8.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
