--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
-  "endOfLine": "auto",
-  "tabWidth": 2
+  "printWidth": 120,
+  "bracketSpacing": true,
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "useTabs": false,
+  "tabWidth": 2,
+  "endOfLine": "auto"
 }
